--- a/deployment.yml
+++ b/deployment.yml
@@ -24,10 +24,10 @@ metadata:
   labels:
     app: wordpress-kubernetes-service
 spec:
-  type: PHPPort
+  type: NodePort
   ports:
     # the port that this service should serve on
     - port: 80
   # label keys and values that must match in order to receive traffic for this service
   selector:
-    app: wordpress-kubernetes
+    app: wordpress-kubernetes-app
